; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/cmdutils/reg/extr_import.c_set_value_state.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/cmdutils/reg/extr_import.c_set_value_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parser = type { i64, i32, i32, i32, i32, i32 }

@REG_VERSION_31 = common dso_local global i64 0, align 8
@PARSE_WIN31_LINE = common dso_local global i32 0, align 4
@LINE_START = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.parser*, i32*)* @set_value_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @set_value_state(%struct.parser* %0, i32* %1) #0 {
  %3 = alloca %struct.parser*, align 8
  %4 = alloca i32*, align 8
  store %struct.parser* %0, %struct.parser** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.parser*, %struct.parser** %3, align 8
  %6 = getelementptr inbounds %struct.parser, %struct.parser* %5, i32 0, i32 5
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.parser*, %struct.parser** %3, align 8
  %9 = getelementptr inbounds %struct.parser, %struct.parser* %8, i32 0, i32 4
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.parser*, %struct.parser** %3, align 8
  %12 = getelementptr inbounds %struct.parser, %struct.parser* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.parser*, %struct.parser** %3, align 8
  %15 = getelementptr inbounds %struct.parser, %struct.parser* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.parser*, %struct.parser** %3, align 8
  %18 = getelementptr inbounds %struct.parser, %struct.parser* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @RegSetValueExW(i32 %7, i32 %10, i32 0, i32 %13, i32 %16, i32 %19)
  %21 = load %struct.parser*, %struct.parser** %3, align 8
  %22 = call i32 @free_parser_data(%struct.parser* %21)
  %23 = load %struct.parser*, %struct.parser** %3, align 8
  %24 = getelementptr inbounds %struct.parser, %struct.parser* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @REG_VERSION_31, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %32

28:                                               ; preds = %2
  %29 = load %struct.parser*, %struct.parser** %3, align 8
  %30 = load i32, i32* @PARSE_WIN31_LINE, align 4
  %31 = call i32 @set_state(%struct.parser* %29, i32 %30)
  br label %36

32:                                               ; preds = %2
  %33 = load %struct.parser*, %struct.parser** %3, align 8
  %34 = load i32, i32* @LINE_START, align 4
  %35 = call i32 @set_state(%struct.parser* %33, i32 %34)
  br label %36

36:                                               ; preds = %32, %28
  %37 = load i32*, i32** %4, align 8
  ret i32* %37
}

declare dso_local i32 @RegSetValueExW(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @free_parser_data(%struct.parser*) #1

declare dso_local i32 @set_state(%struct.parser*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
